fix: quill throwing its own padding around makes spacing too difficult

--- a/src/components/TextEditors/editorStyles.css
+++ b/src/components/TextEditors/editorStyles.css
@@ -12,7 +12,7 @@
 .ql-editor li > .ql-ui:before {
     margin-right: 0.5em;
 }
-.ql-editor a[target="_blank"]::after {
+a[target="_blank"]::after {
     content: "";
     -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' focusable='false' aria-hidden='true' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z'%3E%3C/path%3E%3C/svg%3E");
     mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' focusable='false' aria-hidden='true' viewBox='0 0 24 24' fill='currentColor'%3E%3Cpath d='M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z'%3E%3C/path%3E%3C/svg%3E");
